Added "your cart", added product quantity

--- a/views/product-list.html
+++ b/views/product-list.html
@@ -71,12 +71,12 @@
                         </li>
                     </ul>
 
-                    <form class="navbar-form navbar-left">
-                        <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Search">
-                        </div>
+                    <div class="navbar-left navbar-cart-box">
+                        <span class="navbar-cart-box_subtotal">
+                            Your cart: <span>12</span>
+                        </span>
                         <button class="btn btn-primary">Checkout</button>
-                    </form>
+                    </div>
 
                     <ul class="nav navbar-nav navbar-right">
                         <li>
@@ -91,39 +91,39 @@
     <main>
         <div class="container">
             <div class="row product-list">
-                <div class="col-md-4 product-box">
+                <div class="col-md-2 product-box">
                     <figure>
                         <a href="">
-                            <img src="./../assets/img/bioog_t.jpg" alt=""></a>
+                            <img src="./../assets/img/bioog_f.jpg" alt="" class="img-responsive"></a>
                     </figure>
                     <figcaption>
                         <a href=""><p class="product-box_name">Product name</p></a>
                         <div class="price">2</div>
-                        <button class="btn btn-primary">
-                            <span class="badge">1</span>
-                            Add to cart
-                        </button>
+                        <div class="cart-button">
+                            <input type="text" class="cart-button_quantity" value="1">
+                            <div class="btn btn-primary cart-button_add">Add to cart</div>
+                        </div>
                     </figcaption>
                 </div>
-                <div class="col-md-4 product-box">
+                <div class="col-md-2 product-box">
                     <figure>
                         <a href="">
-                            <img src="./../assets/img/biopa_t.jpg" alt="">
+                            <img src="./../assets/img/biopa_f.jpg" alt="" class="img-responsive">
                         </a>
                     </figure>
                     <figcaption>
                         <a href=""><p class="product-box_name">Product name</p></a>
                         <div class="price">4</div>
-                        <button class="btn btn-primary">
-                            <span class="badge">1</span>
-                            Add to cart
-                        </button>
+                        <div class="cart-button">
+                            <input type="text" class="cart-button_quantity" value="1">
+                            <div class="btn btn-primary cart-button_add">Add to cart</div>
+                        </div>
                     </figcaption>
                 </div>
-                <div class="col-md-4 product-box">
+                <div class="col-md-2 product-box">
                     <figure>
                         <a href="">
-                            <img src="./../assets/img/biozie_t.jpg" alt="">
+                            <img src="./../assets/img/biozie_f.jpg" alt="" class="img-responsive">
                         </a>
                     </figure>
                     <figcaption>
@@ -132,18 +132,16 @@
                             <span class="price product-box_new-price">6</span>
                             <span class="price product-box_old-price">7</span>
                         </div>
-                        <button class="btn btn-primary">
-                            <a class="">-</a>
-                            <span class="badge">1</span>
-                            <a class="">+</a>
-                            Add to cart
-                        </button>
+                        <div class="cart-button">
+                            <input type="text" class="cart-button_quantity" value="1">
+                            <div class="btn btn-primary cart-button_add">Add to cart</div>
+                        </div>
                     </figcaption>
                 </div>
-                <div class="col-md-4 product-box">
+                <div class="col-md-2 product-box">
                     <figure>
                         <a href="">
-                            <img src="./../assets/img/biopomi_t.jpg" alt="">
+                            <img src="./../assets/img/biopomi_f.jpg" alt="" class="img-responsive">
                         </a>
                     </figure>
                     <figcaption>
@@ -152,31 +150,31 @@
                             <span class="price product-box_new-price">8</span>
                             <span class="price product-box_old-price">9</span>
                         </div>
-                        <button class="btn btn-primary">
-                            <span class="badge">1</span>
-                            Add to cart
-                        </button>
+                        <div class="cart-button">
+                            <input type="text" class="cart-button_quantity" value="1">
+                            <div class="btn btn-primary cart-button_add">Add to cart</div>
+                        </div>
                     </figcaption>
                 </div>
-                <div class="col-md-4 product-box">
+                <div class="col-md-2 product-box">
                     <figure>
                         <a href="">
-                            <img src="./../assets/img/dzwo_t.jpg" alt="">
+                            <img src="./../assets/img/dzwo_f.jpg" alt="" class="img-responsive">
                         </a>
                     </figure>
                     <figcaption>
                         <a href=""><p class="product-box_name">Product name</p></a>
                         <div class="price">12</div>
-                        <button class="btn btn-primary">
-                            <span class="badge">1</span>
-                            Add to cart
-                        </button>
+                        <div class="cart-button">
+                            <input type="text" class="cart-button_quantity" value="1">
+                            <div class="btn btn-primary cart-button_add">Add to cart</div>
+                        </div>
                     </figcaption>
                 </div>
-                <div class="col-md-4 product-box">
+                <div class="col-md-2 product-box">
                     <figure>
                         <a href="">
-                            <img src="./../assets/img/smakow_t.jpg" alt="">
+                            <img src="./../assets/img/smakow_f.jpg" alt="" class="img-responsive">
                         </a>
                     </figure>
                     <figcaption>
@@ -185,10 +183,10 @@
                             <span class="price product-box_new-price">14</span>
                             <span class="price product-box_old-price">15</span>
                         </div>
-                        <button class="btn btn-primary">
-                            <span class="badge">1</span>
-                            Add to cart
-                        </button>
+                        <div class="cart-button">
+                            <input type="text" class="cart-button_quantity" value="1">
+                            <div class="btn btn-primary cart-button_add">Add to cart</div>
+                        </div>
                     </figcaption>
                 </div>
             </div>
