--- a/assets/style.css
+++ b/assets/style.css
@@ -97,6 +97,14 @@ a:hover {
     background-color: #A2A6B0;
 }
 
+.navbar-cart-box_subtotal {
+    padding: 10px;
+    border: 1px solid #FF763B;
+    color: #FF763B;
+    margin-right: 10px;
+    background-color: #2A3540;
+}
+
 /* products styles */
 
 .product-box_name {
@@ -115,11 +123,18 @@ a:hover {
     margin: 6px 3px 2px;
 }
 
+/* Navbar */
+
+.navbar-cart-box {
+    margin: 8px 8px 0 20px;
+}
+
 /* Product */
 
 .product-box {
     text-align: center;
     padding: 20px 0;
+    margin: 20px;
 }
 
 .price {
@@ -139,6 +154,28 @@ a:hover {
     top: 43%;
     border-bottom: 1px solid;
     transform: skewY(-17deg);
+}
+
+.cart-button {
+    margin: 0 auto;
+    width: 115px;
+    text-align: center;
+}
+
+.cart-button_quantity {
+    background: #fff;
+    float: left;
+    margin: 6px;
+    padding: 4px 0;
+    text-align: center;
+    width: 24px;
+    color: #000;
+    font: bold 12px Arial,sans-serif;
+    border: none;
+}
+
+.cart-button_add {
+    display: block;
 }
 
 .product-single_shop-link img,
