--- a/assets/style.css
+++ b/assets/style.css
@@ -207,6 +207,10 @@ main .container{
     margin: 20px;
 }
 
+.product-box img {
+    display: initial;
+}
+
 .price {
     text-align: center;
     font-weight: bold;
