--- a/assets/style.css
+++ b/assets/style.css
@@ -118,7 +118,7 @@ footer {
 }
 
 .navbar-default .navbar-brand {
-    color: #2A3540;
+    color: rgba(255, 255, 255, 0.8);
 }
 
 .navbar-default .navbar-brand:focus,
@@ -127,16 +127,11 @@ footer {
 }
 
 .navbar-default .navbar-nav>li>a {
-    color: #2A3540;
-    font-weight: 300;
+    color: rgba(255, 255, 255, 0.8);
 }
 
 .navbar-default .navbar-nav>li>a:focus,
-.navbar-default .navbar-nav>li>a:hover {
-    color: #A2A6B0;
-    background-color: #2A3540;
-}
-
+.navbar-default .navbar-nav>li>a:hover,
 .navbar-default .navbar-nav>.active>a,
 .navbar-default .navbar-nav>.active>a:focus,
 .navbar-default .navbar-nav>.active>a:hover,
